--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.6.9",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "framer-motion": "^4.1.17",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "@chakra-ui/react": "1.6.9",
+    "@emotion/react": "11.4.1",
+    "@emotion/styled": "11.3.0",
+    "framer-motion": "4.1.17",
+    "react": "17.0.0",
+    "react-dom": "17.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.0",
-    "vite": "^2.6.4"
+    "@vitejs/plugin-react": "1.0.0",
+    "vite": "2.6.4"
   }
 }
